Add missing Tailwind and build dependencies
Added @tailwindcss/vite and axios dependencies required by vite.config.js and React components. Fixes build failure where Oryx could not find imported packages during compilation.

--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.294.0",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "axios": "^1.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.1.1",
+    "@tailwindcss/vite": "^4.0.0-alpha.20",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
